# flight-booking-helper

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/routes/: flights.py  trip_context.py
backend/app/services/: amadeus.py  flight_search.py  kiwi_tequila.py  live_public_apis.py  public_api_catalog.py  travelpayouts_aviasales.py  trip_context.py
backend/tests/: test_amadeus.py  test_amadeus_client.py  test_api_candidates.py  test_flight_search_providers.py  test_flight_search_service.py  test_kiwi_tequila_client.py  test_live_public_api_wrappers.py  test_next_steps.py  test_routes.py  test_smoke.py  test_travelpayouts_aviasales_client.py  test_travelpayouts_flight_search_provider.py
docs/: plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  airports.ts  api.ts  styles.css
frontend/src/test/: airports.test.ts  api.test.ts  app.test.tsx  deploy-api.test.ts  deploy.test.ts  design.test.ts  generated-airports.test.ts  next-steps.test.tsx
scripts/: generate-airports.mjs
